# seguimiento-parlamentario

./: .env.template  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
api/: app.py  types.py
api/config/: routes.py
api/data/: routes.py
api/processing/: routes.py
services/processing/: app.py
src/seguimiento_parlamentario/celery/: app.py
src/seguimiento_parlamentario/celery_app/: app.py
src/seguimiento_parlamentario/config/: yt-keywords.json
src/seguimiento_parlamentario/core/: db.py  drivers.py  exceptions.py  tasks.py  utils.py
src/seguimiento_parlamentario/extraction/: drivers.py  scrapers.py  tasks.py  videos.py
src/seguimiento_parlamentario/processing/: mindmaps.py  prompting.py  qa.py  summarizer.py  tasks.py  videos.py
src/seguimiento_parlamentario/reports/: formatters.py  mindmap.html  styles.css
