[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seguimiento_parlamentario"
version = "0.1.0"
description = "A simple Python project for extracting and processing data from the chilean Parliament."
authors = [
    { name = "Diego Acevedo", email = "dacevedo@dcc.uchile.cl" }
]

requires-python = ">=3.10"

dependencies = [
    "numpy==2.1.3",
    "selenium==4.30.0",
    "pymongo==4.11.3",
    "requests==2.32.3",
    "youtube-transcript-api==1.0.3",
    "celery==5.4.0",
    "openai-whisper==20240930",
    "ffmpeg-python==0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

test = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["setup"]
