[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seguimiento_parlamentario"
version = "0.1.0"
description = "A simple Python project for extracting and processing data from the chilean Parliament."
authors = [
    { name = "Diego Acevedo", email = "dacevedo@dcc.uchile.cl" }
]

requires-python = ">=3.10"

dependencies = [
    "babel==2.17.0",
    "celery==5.4.0",
    "ffmpeg-python==0.2.0",
    "Flask==3.1.0",
    "google-cloud-bigquery==3.31.0",
    "google-cloud-tasks==2.19.2",
    "numpy==2.1.3",
    "openai==1.78.1",
    "pymongo==4.11.3",
    "requests==2.32.3",
    "selenium==4.30.0",
    "youtube-transcript-api==1.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

test = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["setup"]
